# claude-dev-cli

./: .gitignore  CHANGELOG.md  CONTEXT_INTELLIGENCE.md  CONTRIBUTING.md  HOMEBREW.md  HOMEBREW_SETUP.md  LAUNCH_ANNOUNCEMENT.md  MANIFEST.in  MIGRATION.md  OLLAMA_TEST_RESULTS.md  QUICKSTART.md  README.md  RENAME.md  ROADMAP.md  TIMEOUT_TEST_RESULTS.md  WARP.md  pyproject.toml  update-homebrew-formula.sh
examples/: README.md
examples/basic_usage/: README.md  sample.py
examples/developer_workflows/: README.md
examples/multi_api_routing/: README.md  sample-project-config.json
examples/toon_format/: README.md  sample_data.json
examples/workflows/: ai-decision-workflow.yaml  multi-model-workflow.yaml  review-and-refactor.yaml
src/claude_dev_cli/: __init__.py  cli.py  commands.py  config.py  context.py  core.py  deprecation.py  history.py  input_sources.py  multi_file_handler.py  path_utils.py  secure_storage.py  template_manager.py  templates.py  toon_utils.py  usage.py  warp_integration.py  workflows.py
src/claude_dev_cli/logging/: __init__.py  logger.py  markdown_logger.py
src/claude_dev_cli/notifications/: __init__.py  notifier.py  ntfy.py
src/claude_dev_cli/plugins/: __init__.py  base.py
src/claude_dev_cli/plugins/diff_editor/: README.md  __init__.py  plugin.py  viewer.py
src/claude_dev_cli/project/: __init__.py  bug_tracker.py  config.py  context_gatherer.py  executor.py
src/claude_dev_cli/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
src/claude_dev_cli/tickets/: __init__.py  backend.py  markdown.py  repo_tickets.py
src/claude_dev_cli/vcs/: __init__.py  git.py  manager.py
tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_config.py  test_context.py  test_core.py  test_diff_editor.py  test_history.py  test_input_sources.py  test_multi_file_handler.py  test_path_utils.py  test_secure_storage.py  test_template_manager.py  test_toon_utils.py  test_usage.py
