[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-dev-cli"
version = "0.16.1"
description = "A powerful CLI tool for developers using Claude AI with multi-API routing, test generation, code review, and usage tracking"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Julio", email = "thinmanj@users.noreply.github.com"}
]
keywords = ["claude", "ai", "cli", "development", "testing", "code-review", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "anthropic>=0.18.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.0",
    "unidiff>=0.7.0",
]

[project.optional-dependencies]
toon = [
    "toon-format>=0.1.0",
]
plugins = [
    "pygments>=2.0.0",
]
generation = [
    "pypdf>=3.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.0.0",
]
openai = [
    "openai>=1.0.0",
]
ollama = [
    "requests>=2.28.0",
]
local = [
    "requests>=2.28.0",
]
all-providers = [
    "openai>=1.0.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "toon-format>=0.1.0",
    "pygments>=2.0.0",
    "pypdf>=3.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/thinmanj/claude-dev-cli"
Repository = "https://github.com/thinmanj/claude-dev-cli"
Issues = "https://github.com/thinmanj/claude-dev-cli/issues"

[project.scripts]
cdc = "claude_dev_cli.cli:main"
claude-dev = "claude_dev_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_dev_cli = ["templates/*.txt"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
